hero section position fix on mobile

--- a/wp-content/themes/portfolio/css/header/index.scss
+++ b/wp-content/themes/portfolio/css/header/index.scss
@@ -63,7 +63,7 @@
 }
 
 .hero-section {
-  position: fixed;
+  position: fixed !important;
   margin: 0 auto;
   width: 100%;
   top: 0;
